# cmg

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/dsaac/: CMakeLists.txt  README.md  btree.c  btree.h  common.h  dot.c  dot.h  expression2tree.c  infix2postfix.c  list.c  list.h  main.c  memtracker.c  memtracker.h  payload.c  payload.h  queue.c  queue.h  stack.c  stack.h  test.c  test.h  tree.c  tree.h
src/epoll_eventfd/: CMakeLists.txt  main.c
src/epoll_examples/: CMakeLists.txt  README.md  main.c
src/libs/: CMakeLists.txt
src/libs/tlpi/: CMakeLists.txt
src/medsr/: CMakeLists.txt  Common.h  main.c
src/medsr/Math/: KitsuneMath.h  MathUtil.c  MathUtil.h  Matrix.c  Matrix.h  Quaternion.c  Quaternion.h  Vector.c  Vector.h
src/medsr/Profile/: memtracker.c  memtracker.h
src/medsr/Renderer/: Camera.c  Camera.h  Color.h  Mesh.c  Mesh.h  Renderer.c  Renderer.h  Texture.c  Texture.h  Vertex.c  Vertex.h
src/medsr/Utils/: Bitmap.c  Bitmap.h  FNVHash.c  FNVHash.h  Gif.c  Gif.h  JsonModelLoader.c  JsonModelLoader.h  LodePng.c  LodePng.h  jsmn.c  jsmn.h
src/mph/: CMakeLists.txt  README.md  perfect.c  perfect.h
src/osmanthus/: CMakeLists.txt  README.md
src/osmanthus/arraygenerator/: CMakeLists.txt  constants.h  main.c  texas_utils.h  utils.c  utils.h
src/osmanthus/docs/: evaluator.md  odds.md  osmanthus.md  pseudo.md  (+1 more)
src/texas/: CMakeLists.txt  answer.c  bits.c  bits.h  define.h  eval_main.c  generate.c  generate.h  main.c  temp.c  test.c  texas_array.c  texas_array.h  texas_eval.c  texas_eval.h  texas_main.c  texas_utils.c  texas_utils.h  utils.c
src/tlpi/: CMakeLists.txt
(+15 files in other folders)
