# libraries
add_subdirectory(libs)



# Data Structure, Algorithm and Application in C
add_subdirectory(dsaac)

# MED soft renderer
add_subdirectory(medsr)

# Minimum Perfect Hash generator
add_subdirectory(mph)

# Osmanthus (gold flower poker) evaluator
add_subdirectory(osmanthus)

# Texas hold'em poker evaluator
add_subdirectory(texas)

# The Linux Programming Interface
add_subdirectory(tlpi)